<resources>
    <string name="app_name">SearchMovies</string>
    <string name="hint_search_movie">Search movies</string>

    <string name="lbl_director">Director</string>
    <string name="lbl_actor">Actor</string>
    <string name="lbl_plot">Story</string>
    <string name="lbl_writer">Writer</string>

    <string name="lbl_Meta_score">Score</string>
    <string name="lbl_imdbRating">Rating</string>
    <string name="lbl_votes">Votes</string>
    <string name="error_no_internet">Please check your internet connection</string>
    <string name="btn_search">Search</string>
    <string name="dialog_close">Close</string>

</resources>
