<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="movieDetailsVM"
            type="com.example.searchmovies.ui.moviedetails.MovieDetailsViewModel" />
    </data>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraint_root"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.constraintlayout.widget.Group
                android:id="@+id/group"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                app:constraint_referenced_ids="poster_image,
                lbl_plot,txt_plot,txt_director,txt_actor,
                txt_writer,lbl_director,lbl_actor,lbl_writer,
                horizontal_line,txt_popularity,txt_popularity_points,txt_score,txt_score,
                txtRatings,txt_score_points,txt_review_points,txt_review,txtRatings" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/poster_image"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:alpha="0.4"
                android:scaleType="centerCrop"
                app:layout_constraintTop_toTopOf="parent"
                app:loadImage="@{movieDetailsVM.details.poster}"
                app:setHeightDividedBy="@{2.5}" />

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="@dimen/size_80dp"
                android:layout_height="@dimen/size_120dp"
                android:layout_margin="@dimen/size_10dp"
                android:scaleType="centerCrop"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:loadImage="@{movieDetailsVM.details.poster}" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/txt_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:paddingStart="@dimen/size_16dp"
                android:paddingTop="@dimen/size_16dp"
                android:paddingEnd="@dimen/size_16dp"
                android:text="@{movieDetailsVM.details.title}"
                android:textColor="@android:color/black"
                android:textSize="@dimen/textXMedium"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@id/txt_year"
                app:layout_constraintEnd_toStartOf="@id/imgPlay"
                app:layout_constraintStart_toStartOf="parent" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/txt_year"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:paddingStart="@dimen/size_16dp"
                android:paddingTop="@dimen/size_2dp"
                android:paddingEnd="@dimen/size_16dp"
                android:paddingBottom="@dimen/size_16dp"
                android:text="@{movieDetailsVM.details.year}"
                android:textColor="@android:color/black"
                android:textSize="@dimen/textMedium"
                app:layout_constraintBottom_toBottomOf="@id/poster_image"
                app:layout_constraintEnd_toStartOf="@id/imgPlay"
                app:layout_constraintStart_toStartOf="parent" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/imgPlay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/size_10dp"
                android:src="@drawable/ic_baseline_play_circle_outline_24"
                app:layout_constraintBottom_toBottomOf="@id/poster_image"
                app:layout_constraintEnd_toEndOf="@id/poster_image" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/txtReleased"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="@dimen/size_16dp"
                android:text="@{movieDetailsVM.details.released}"
                android:textColor="@android:color/black"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@id/txtDuration"
                app:layout_constraintEnd_toStartOf="@id/txtDuration"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/poster_image"
                app:layout_constraintTop_toTopOf="@id/txtDuration" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/txtDuration"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="@dimen/size_16dp"
                android:text="@{movieDetailsVM.details.runtime}"
                android:textColor="@android:color/black"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@id/txtRatings"
                app:layout_constraintEnd_toStartOf="@id/txtRatings"
                app:layout_constraintStart_toEndOf="@id/txtReleased"
                app:layout_constraintTop_toBottomOf="@id/poster_image"
                app:layout_constraintTop_toTopOf="@id/txtRatings" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/txtRatings"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="@dimen/size_16dp"
                android:text="@{movieDetailsVM.details.Language}"
                android:textColor="@android:color/black"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/txtDuration"
                app:layout_constraintTop_toBottomOf="@id/poster_image" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/lbl_plot"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/size_16dp"
                android:paddingTop="@dimen/size_16dp"
                android:paddingRight="@dimen/size_16dp"
                android:paddingBottom="@dimen/size_4dp"
                android:text="@string/lbl_plot"
                android:textSize="@dimen/textNormal"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@id/txtReleased" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/txt_plot"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/size_16dp"
                android:paddingRight="@dimen/size_16dp"
                android:paddingBottom="@dimen/size_4dp"
                android:text="@{movieDetailsVM.details.plot}"
                android:textSize="@dimen/textNormal"
                app:layout_constraintTop_toBottomOf="@id/lbl_plot" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/txt_review"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingTop="@dimen/size_16dp"
                android:paddingBottom="@dimen/size_8dp"
                android:text="@string/lbl_imdbRating"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="@dimen/textMedium"
                android:textStyle="bold"
                app:layout_constraintEnd_toStartOf="@id/txt_score"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/txt_plot" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/txt_score"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingTop="@dimen/size_16dp"
                android:paddingBottom="@dimen/size_8dp"
                android:text="@string/lbl_Meta_score"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="@dimen/textMedium"
                android:textStyle="bold"
                app:layout_constraintEnd_toStartOf="@id/txt_popularity"
                app:layout_constraintStart_toEndOf="@id/txt_review"
                app:layout_constraintTop_toBottomOf="@id/txt_plot" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/txt_popularity"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingTop="@dimen/size_16dp"
                android:paddingBottom="@dimen/size_8dp"
                android:text="@string/lbl_votes"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="@dimen/textMedium"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/txt_score"
                app:layout_constraintTop_toBottomOf="@id/txt_plot" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/txt_review_points"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingBottom="@dimen/size_16dp"
                android:text="@{movieDetailsVM.details.imdbRating}"
                app:layout_constraintEnd_toStartOf="@id/txt_score_points"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/txt_review" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/txt_score_points"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingBottom="@dimen/size_16dp"
                android:text="@{movieDetailsVM.details.metascore}"
                app:layout_constraintEnd_toStartOf="@id/txt_popularity_points"
                app:layout_constraintStart_toEndOf="@id/txt_review_points"
                app:layout_constraintTop_toBottomOf="@id/txt_score" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/txt_popularity_points"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingBottom="@dimen/size_16dp"
                android:text="@{movieDetailsVM.details.imdbVotes}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/txt_score_points"
                app:layout_constraintTop_toBottomOf="@id/txt_popularity" />

            <View
                android:id="@+id/horizontal_line"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="@dimen/size_10dp"
                android:layout_marginBottom="@dimen/size_10dp"
                android:background="@android:color/darker_gray"
                app:layout_constraintTop_toBottomOf="@id/txt_score_points" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/lbl_actor"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:padding="@dimen/size_16dp"
                android:text="@string/lbl_actor"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="@dimen/textMedium"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@id/barrier_actor"
                app:layout_constraintEnd_toStartOf="@id/txt_actor"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/horizontal_line" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/txt_actor"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:paddingStart="@dimen/size_2dp"
                android:paddingTop="@dimen/size_16dp"
                android:paddingEnd="@dimen/size_2dp"
                android:paddingBottom="@dimen/size_16dp"
                android:text="@{movieDetailsVM.details.actors}"
                app:layout_constraintBottom_toBottomOf="@id/barrier_actor"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/lbl_actor"
                app:layout_constraintTop_toBottomOf="@id/horizontal_line" />

            <androidx.constraintlayout.widget.Barrier
                android:id="@+id/barrier_actor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:barrierDirection="bottom"
                app:constraint_referenced_ids="lbl_actor,txt_actor" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/lbl_writer"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:padding="@dimen/size_16dp"
                android:text="@string/lbl_writer"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="@dimen/textMedium"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@id/barrier_writer"
                app:layout_constraintEnd_toStartOf="@id/txt_writer"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/txt_actor" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/txt_writer"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:paddingStart="@dimen/size_2dp"
                android:paddingTop="@dimen/size_16dp"
                android:paddingEnd="@dimen/size_2dp"
                android:paddingBottom="@dimen/size_16dp"
                android:text="@{movieDetailsVM.details.writer}"
                app:layout_constraintBottom_toBottomOf="@id/barrier_writer"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/lbl_writer"
                app:layout_constraintTop_toBottomOf="@id/txt_actor" />

            <androidx.constraintlayout.widget.Barrier
                android:id="@+id/barrier_writer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:barrierDirection="bottom"
                app:constraint_referenced_ids="lbl_writer,lbl_actor" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/lbl_director"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:padding="@dimen/size_16dp"
                android:text="@string/lbl_director"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="@dimen/textMedium"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/txt_director"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/txt_writer" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/txt_director"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:paddingStart="@dimen/size_2dp"
                android:paddingTop="@dimen/size_16dp"
                android:paddingEnd="@dimen/size_2dp"
                android:paddingBottom="@dimen/size_16dp"
                android:text="@{movieDetailsVM.details.director}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/lbl_director"
                app:layout_constraintTop_toBottomOf="@id/txt_writer" />

            <ProgressBar
                android:id="@+id/progress_bar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

</layout>
